added submit button

--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -32,6 +32,8 @@
         <br>
         <label for="comments">Comments</label>
         <textarea name="comments" wrap="hard"></textarea>
+        <br>
+        <input type="submit" value="Submit">
     </form>
 </body>
 
