added radio value

--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -19,7 +19,7 @@
         <br>
 
         <label for="computerScience">Computer Science</label>
-        <input type="radio" name="major" id="computerScience">
+        <input type="radio" name="major" id="computerScience" value="computerScience">
         <br>
         <label for="webDev">Web Design &amp; Development</label>
         <input type="radio" name="major" id="webDev">
