added more values

--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -19,16 +19,16 @@
         <br>
 
         <label for="computerScience">Computer Science</label>
-        <input type="radio" name="major" id="computerScience" value="computerScience">
+        <input type="radio" name="major" value="computerScience">
         <br>
         <label for="webDev">Web Design &amp; Development</label>
-        <input type="radio" name="major" id="webDev">
+        <input type="radio" name="major" value="webDev">
         <br>
         <label for="CIT">CIT</label>
-        <input type="radio" name="major" id="CIT">
+        <input type="radio" name="major" value="CIT">
         <br>
         <label for="computerEngineering">Computer Engineering</label>
-        <input type="radio" name="major" id="computerEngineering">
+        <input type="radio" name="major" value="computerEngineering">
         <br>
         <label for="comments">Comments</label>
         <textarea name="comments" wrap="hard"></textarea>
