--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Week 3 Teach one another Form Submission</h1>
     <form action="results.php" method="POST">
-        <label for="fullName">Name</label>
-        <input type="text" name="fullName" required>
+        <label for="name">Name</label>
+        <input type="text" name="name" required>
 
         <br>
 
