--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -19,20 +19,45 @@
         <br>
 
         <label for="computerScience">Computer Science</label>
-        <input type="radio" name="major" value="computerScience" required>
+        <input type="radio" name="major" value="Computer Science" required>
         <br>
         <label for="webDev">Web Design &amp; Development</label>
-        <input type="radio" name="major" value="webDev" required>
+        <input type="radio" name="major" value="Web Development" required>
         <br>
         <label for="CIT">CIT</label>
         <input type="radio" name="major" value="CIT" required>
         <br>
         <label for="computerEngineering">Computer Engineering</label>
-        <input type="radio" name="major" value="computerEngineering" required>
+        <input type="radio" name="major" value="Computer Engineering" required>
         <br>
         <label for="comments">Comments</label>
         <textarea name="comments" wrap="hard" required></textarea>
         <br>
+
+        <label for="NA">North America</label>
+        <input name="continent" type="checkbox" value="North America" required>
+        <br>
+        <label for="SA">South America</label>
+        <input name="continent" type="checkbox" value="South America" required>
+        <br>
+        <label for="Australia">Australia</label>
+        <input name="continent" type="checkbox" value="Australia" required>
+        <br>
+        <label for="Antartica">Antartica</label>
+        <input name="continent" type="checkbox" value="Antartica" required>
+        <br>
+        <label for="Asia">Asia</label>
+        <input name="continent" type="checkbox" value="Asia" required>
+        <br>
+        <label for="Europe">Europe</label>
+        <input name="continent" type="checkbox" value="Europe" required>
+        <br>
+        <label for="Africa">Africa</label>
+        <input name="continent" type="checkbox" value="Africa" required>
+        <br>
+
+
+        
         <input type="submit" value="Submit">
     </form>
 </body>
