--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -35,25 +35,25 @@
         <br>
 
         <label for="NA">North America</label>
-        <input name="continent" type="checkbox" value="North America" required>
+        <input name="continents" type="checkbox" value="North America">
         <br>
         <label for="SA">South America</label>
-        <input name="continent" type="checkbox" value="South America" required>
+        <input name="continents" type="checkbox" value="South America">
         <br>
         <label for="Australia">Australia</label>
-        <input name="continent" type="checkbox" value="Australia" required>
+        <input name="continents" type="checkbox" value="Australia">
         <br>
         <label for="Antartica">Antartica</label>
-        <input name="continent" type="checkbox" value="Antartica" required>
+        <input name="continents" type="checkbox" value="Antartica">
         <br>
         <label for="Asia">Asia</label>
-        <input name="continent" type="checkbox" value="Asia" required>
+        <input name="continents" type="checkbox" value="Asia">
         <br>
         <label for="Europe">Europe</label>
-        <input name="continent" type="checkbox" value="Europe" required>
+        <input name="continents" type="checkbox" value="Europe">
         <br>
         <label for="Africa">Africa</label>
-        <input name="continent" type="checkbox" value="Africa" required>
+        <input name="continents" type="checkbox" value="Africa">
         <br>
 
 
