--- a/web/wk3/wk3Teach.html
+++ b/web/wk3/wk3Teach.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1>Week 3 Teach one another Form Submission</h1>
+    <a href="../index.php">Home</a>
     <form action="results.php" method="POST">
         <label for="name">Name</label>
         <input type="text" name="name" required>
